<resources>
    <string name="app_name">ANKA</string>
    <string name="yoku_beni_maru">Yoku Beni Maru</string>
    <string name="_7_11">7/11</string>
    <string name="family_mart">Family Mart</string>
    <string name="tsuruga_drug_store">Tsuruga Drug Store</string>
    <string name="lion_dor">Lion D\'or</string>
    <string name="lawson">Lawson</string>
    <string name="please_choose_category">Please choose category</string>
    <string name="cateliary">cateliary</string>
    <string name="toiletries">Toiletries</string>
    <string name="drugs">Drugs</string>
    <string name="food">food</string>
    <string name="children_toys">Children toys</string>
    <string name="clothes">Clothes</string>

    <!-- more organized way -->
    <string-array name="goods_demo">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

    <string-array name="categories">
        <item>Fruits</item>
        <item>Veggies</item>
        <item>Drugs</item>
        <item>Drinks</item>
        <item>Hair</item>
    </string-array>
    <!--
    <string-array name="activity_stores">
        <item>ヨークベニマル</item>
        <item>7-eleven</item>
        <item>ファミリーマート</item>
        <item>ツルハドラッグ</item>
        <item>Lion D\'or</item>
        <item>ローソン</item>
    </string-array>
    -->

    <string-array name="stores">
        <item>@string/family_mart</item>
        <item>@string/_7_11</item>
        <item>@string/yoku_beni_maru</item>
        <item>@string/tsuruga_drug_store</item>
        <item>@string/lion_dor</item>
        <item>@string/lawson</item>
    </string-array>

    <string name="userID">User ID</string>
    <string name="pwd">Password</string>
    <string name="pwd_c">Confirm Password</string>
    <string name="emailAdr">Email Address</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgetPwd">forgot password?</string>

    <string name="title_cart">Cart</string>
    <string name="proceed_to_payment">Proceed to payment</string>

    <string name="title_productInfo">Details</string>
    <string name="search">Search</string>

    <string name="checkCart">Check Cart</string>
    <string name="addToCart">Add to Cart</string>
    <string name="introduction">Introduction</string>
    <string name="amount">Amount</string>
    <string name="totalPrice">Total Price</string>

    <string name="calculate">Calculate</string>
    <string name="cartItemDemo">Cart items go here</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="paymentType">Way of Payment</string>
    <string name="remarks">Remarks (if any)</string>

    <string-array name="paymentType">
        <item>---Please choose payment type---</item>
        <item>XXXPay</item>
        <item>YYYPay</item>
        <item>ZZZPay</item>
    </string-array>

    <string name="confirm">Confirm</string>

    <string name="thankYou">Thank you very much!\nPlease take a screenshot to save the QR code for opening the locker.</string>
    <string name="continueShopping">Continue Shopping</string>
    <string name="ANKA">ANKA</string>
</resources>
