<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_rounded_buttons"
        android:backgroundTint="@color/bone"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SignUpBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordTextView"
        app:layout_constraintVertical_bias="0.050" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:background="@drawable/layout_rounded_buttons"
        android:backgroundTint="@color/bone"
        android:text="@string/signUp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LoginBtn" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/layout_rounded_edittext"
        android:ems="15"
        android:hint="@string/userID"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/layout_rounded_edittext"
        android:ems="15"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="@+id/UsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/UsernameEditText" />

    <TextView
        android:id="@+id/ForgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="25dp"
        android:background="@color/red"
        android:text="@string/forgetPwd"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/PasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>