<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/uid_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userID"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/UsernameEditText"
        app:layout_constraintTop_toTopOf="@+id/upper_guideline" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uid_textView" />

    <TextView
        android:id="@+id/pwd_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pwd"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/PasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/UsernameEditText" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/UsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/pwd_textView" />

    <TextView
        android:id="@+id/ForgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:text="@string/forgetPwd"
        android:textColor="@color/bone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/PasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />

    <Button
        android:id="@+id/LoginBtn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/under_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/under_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>