<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_s_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper_s_guideline"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/signUp_progressBar"
            style="@style/customProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mini_upper_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailAdr"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/signUp_emailAdr"
            app:layout_constraintTop_toTopOf="@+id/mini_upper_guideline" />

        <EditText
            android:id="@+id/signUp_emailAdr"
            style="@style/customEditText"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textView" />

        <TextView
            android:id="@+id/pwd_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pwd"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/signUp_pwd"
            app:layout_constraintStart_toStartOf="@+id/signUp_pwd"
            app:layout_constraintTop_toBottomOf="@+id/signUp_emailAdr" />

        <EditText
            android:id="@+id/signUp_pwd"
            style="@style/customEditText"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd_textView" />

        <TextView
            android:id="@+id/pwdC_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pwd_c"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/signUp_pwd_c"
            app:layout_constraintTop_toBottomOf="@+id/signUp_pwd" />

        <EditText
            android:id="@+id/signUp_pwd_c"
            style="@style/customEditText"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwdC_textView" />

        <Button
            android:id="@+id/signUpBtn"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_pwd_c"
            app:layout_constraintVertical_bias="0.717" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>